--- a/.eslintrc
+++ b/.eslintrc
@@ -32,6 +32,7 @@
 
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
+    "react/prop-types": 0,
 
     "prettier/prettier": [
       "warn",
@@ -41,7 +42,8 @@
       }
     ],
     "jsx-a11y/click-events-have-key-events": "off",
-    "jsx-a11y/no-static-element-interactions": "off"
+    "jsx-a11y/no-static-element-interactions": "off",
+    "no-case-declarations": "off"
   },
   "settings": {
     "react": {
