--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 VITE_TMDB_API_KEY='26899f086ffb57b74e340bb2f5b6fbfc'
 VITE_TMDB_API_URL='https://api.themoviedb.org/3/'
-VITE_TMDB_IMAGES_LOCATION_URL='https://image.tmdb.org/t/p/w500'
+VITE_TMDB_IMAGES_LOCATION_URL='https://image.tmdb.org/t/p/'
+VITE_TMDB_IMAGE_500_SIZE='w500'
+VITE_TMDB_IMAGE_BG_SIZE='original'
